# KansoState

./: .attribution-denylist  .editorconfig  .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci-dashboard.yml  ci-infra.yml  ci-semantic-py.yml  ci-sentinel-go.yml  nightly.yml  release.yml
apps/dashboard/: Dockerfile  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
docs/: architecture.md  data-contracts.md  features.md  perf-baselines.md  release-v0.1.0.md  runbook.md  security-review.md  slo.md
docs/adr/: 0001-monorepo.md  0002-firestore-sharding.md  0003-vector-clocks.md  0004-no-ai-attribution.md
infra/apache/: kansostate-api.conf  kansostate-combined.conf  kansostate-grafana.conf  kansostate-tailscale.conf  kansostate.conf
infra/prometheus/: alerts.yml  prometheus.yml
scripts/: apache-setup.sh  bootstrap-go.sh  check-attribution.sh  dev-up.sh  gen-proto.sh  seed-meeting.sh
services/semantic-py/: Dockerfile  pyproject.toml
services/semantic-py/src/semantic/: main.py  settings.py
services/semantic-py/src/semantic/api/: deps.py  routes_classify_culture.py  routes_embed.py
services/semantic-py/src/semantic/culture/: classifier.py
services/semantic-py/src/semantic/embeddings/: base.py  onnx.py  openai_compat.py  sentence_transformers.py
services/semantic-py/src/semantic/infra/: metrics.py
services/semantic-py/src/semantic/models/: requests.py  responses.py
services/semantic-py/tests/: bench_embed_throughput.py  test_embed_routes.py
(+96 files in other folders)
